--- a/angular.json
+++ b/angular.json
@@ -54,6 +54,22 @@
               ],
               "outputHashing": "all"
             },
+            "gp": {
+              "outputPath": "docs",
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "outputHashing": "all"
+            },
             "development": {
               "buildOptimizer": false,
               "optimization": false,
