:sparkles: add base href

--- a/angular.json
+++ b/angular.json
@@ -55,6 +55,7 @@
               "outputHashing": "all"
             },
             "gp": {
+              "baseHref": "/poc-push-app/",
               "outputPath": "docs",
               "budgets": [
                 {
